# Remus

examples/BasicClient/: clientMain.cxx
examples/InteractiveClient/: interactiveClient.cxx
examples/Triangle/Client/: client_main.cxx
remus/: Readme.md
remus/client/: AbstractJobRequest.h  CMakeLists.txt  Client.cxx  Client.h  JobDataRequest.h  JobFileRequest.cxx  JobFileRequest.h
remus/proto/: CMakeLists.txt
remus/server/: Server.cxx
remus/server/detail/: JobQueue.h
remus/server/detail/testing/: UnitTestJobQueue.cxx
